# integer-factorization

./: CMakeLists.txt  README.md  integer.txt  main.cpp
